# PedestrianTrackingApplication

./: .gitignore  CMakeLists.txt  Planning.vsdx
Include/: CVImageWidget.h  Camera.h  CameraAbstractItemDelegate.h  CameraAbstractItemModel.h  CameraItem.h  LoadProject.h  NewProjectWizard.h  NewProjectWizardPage1.h  NewProjectWizardPage2.h  ProjectVariables.h  TrackingApplicationMainWindow.h  Video.h  WelcomeDialog.h
Source/: Camera.cpp  CameraAbstractItemDelegate.cpp  CameraAbstractItemModel.cpp  CameraItem.cpp  CreateNewProjectWizardPage1.ui  CreateNewProjectWizardPage2.ui  EmptyWizardDialog.ui  LoadProject.cpp  NewProjectWizard.cpp  NewProjectWizardPage1.cpp  NewProjectWizardPage2.cpp  SaveProject.cpp  TrackingApplicationMainWindow.cpp  TrackingApplicationMainWindowUI.ui  Video.cpp  WelcomeDialog.cpp  WelcomeDialog.ui  main.cpp
